scrollbar fix

--- a/menarini-master-template/ui.frontend/src/main/webpack/mastertemplate/components/_share.scss
+++ b/menarini-master-template/ui.frontend/src/main/webpack/mastertemplate/components/_share.scss
@@ -7,6 +7,7 @@
 		cursor: pointer;
 		align-self: center;
 		bottom: 0px;
+		padding:0;
 	}
 	&-mobile {
 		bottom: -60px;
